Bug 106033 - [CI] igt@.* - dmesg-warn - flip_done timed out
Summary: [CI] igt@.* - dmesg-warn - flip_done timed out
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
: 106918 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-13 12:07 UTC by Martin Peres
Modified: 2018-08-28 13:19 UTC (History)
1 user (show)

See Also:
i915 platform: GM45
i915 features: display/atomic


Attachments

Description Martin Peres 2018-04-13 12:07:53 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_8/fi-ctg-p8600/igt@gem_exec_params@cliprects_ptr-dirt.html

[  498.144201] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CRTC:39:pipe A] flip_done timed out
[  508.384286] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CONNECTOR:52:LVDS-1] flip_done timed out
[  518.624275] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [PLANE:28:primary A] flip_done timed out
[  528.864280] [drm:drm_atomic_helper_wait_for_flip_done] *ERROR* [CRTC:39:pipe A] flip_done timed out
[  539.104304] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CRTC:39:pipe A] flip_done timed out
[  549.344258] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CONNECTOR:52:LVDS-1] flip_done timed out
[  559.584266] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [PLANE:28:primary A] flip_done timed out
[  569.824265] [drm:drm_atomic_helper_wait_for_flip_done] *ERROR* [CRTC:39:pipe A] flip_done timed out
[  580.064270] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CRTC:39:pipe A] flip_done timed out
[  590.304251] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CONNECTOR:52:LVDS-1] flip_done timed out
[  600.544271] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [PLANE:28:primary A] flip_done timed out
[  610.784164] [drm:drm_atomic_helper_wait_for_flip_done] *ERROR* [CRTC:39:pipe A] flip_done timed out
Comment 2 Martin Peres 2018-06-14 11:40:34 UTC
Now also seen on BLB:

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_62/fi-blb-e6850/igt@gem_exec_capture@capture-render.html

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_62/fi-blb-e6850/igt@sw_sync@sync_merge_invalid.html

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_62/fi-blb-e6850/igt@sw_sync@sync_merge.html

[  831.968057] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CRTC:32:pipe A] flip_done timed out
[  842.208046] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CONNECTOR:38:VGA-1] flip_done timed out
[  852.448044] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [PLANE:28:plane A] flip_done timed out
[  862.688057] [drm:drm_atomic_helper_wait_for_flip_done] *ERROR* [CRTC:32:pipe A] flip_done timed out
[  872.928047] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CRTC:32:pipe A] flip_done timed out
[  883.168044] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [CONNECTOR:38:VGA-1] flip_done timed out
[  893.408048] [drm:drm_atomic_helper_wait_for_dependencies] *ERROR* [PLANE:28:plane A] flip_done timed out
[  903.648047] [drm:drm_atomic_helper_wait_for_flip_done] *ERROR* [CRTC:32:pipe A] flip_done timed out
Comment 3 Ville Syrjala 2018-06-14 18:22:01 UTC
(In reply to Martin Peres from comment #2)
> Now also seen on BLB:

<5>[  224.968674] i915 0000:00:02.0: Resetting chip for Manually set wedged engine mask = ffffffffffffffff
<7>[  224.971891] [drm:intel_gpu_reset [i915]] rcs0: timed out on STOP_RING
...
<7>[  229.207101] [drm:intel_gpu_reset [i915]] rcs0: timed out on STOP_RING
<3>[  229.816053] i915 0000:00:02.0: Failed to reset chip
<7>[  229.816231] i915_gem_set_wedged rcs0

And I suppose the display engine is now semi-dead:
<7>[  231.345765] [drm:intel_enable_pipe [i915]] enabling pipe A
<7>[  231.377283] [drm:intel_gpu_reset [i915]] rcs0: timed out on STOP_RING
<3>[  241.632056] [drm:drm_atomic_helper_wait_for_flip_done] *ERROR* [CRTC:32:pipe A] flip_done timed out
<3>[  241.632287] [drm:intel_check_cpu_fifo_underruns [i915]] *ERROR* pipe A underrun

I think that one deserves its own bug. Pretty sure I've fixed the ctg/elk flip_done issues now.
Comment 4 Ville Syrjala 2018-06-14 18:24:26 UTC
commit 132c27c97cb958f637dc05adc35a61b47779bcd8
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Jun 11 23:02:55 2018 +0300

    drm/i915: Fix PIPESTAT irq ack on i965/g4x

Fingers crossed...
Comment 5 Martin Peres 2018-06-19 12:51:44 UTC
(In reply to Ville Syrjala from comment #4)
> commit 132c27c97cb958f637dc05adc35a61b47779bcd8
> Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
> Date:   Mon Jun 11 23:02:55 2018 +0300
> 
>     drm/i915: Fix PIPESTAT irq ack on i965/g4x
> 
> Fingers crossed...

Looks better, thanks!
Comment 6 Jani Saarinen 2018-06-19 14:26:02 UTC
Closing, thanks.
Comment 7 Martin Peres 2018-08-28 13:19:37 UTC
*** Bug 106918 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.